test/functions/compilation-errors/error-stack-trace-task-fn1.chpl


proc baz(arg) {
  arg = 1;
}

proc bar(arg) {
  on Locales[numLocales-1] {
    baz(arg);
  }
}

proc foo(arg) {
  bar(arg);
}

foo("hi");
